--- a/ExelTools/project.json
+++ b/ExelTools/project.json
@@ -1,7 +1,9 @@
 ﻿{
   "dependencies": {
     "Microsoft.AspNetCore.Server.IISIntegration": "1.0.0-rc2-final",
-    "Microsoft.AspNetCore.Server.Kestrel": "1.0.0-rc2-final"
+    "Microsoft.AspNetCore.Server.Kestrel": "1.0.0-rc2-final",
+    "Microsoft.AspNetCore.StaticFiles": "1.0.0-rc2-final",
+      "Microsoft.AspNetCore.Mvc": "1.0.0-rc2-final"
   },
 
   "tools": {
