--- a/ExelTools/project.json
+++ b/ExelTools/project.json
@@ -1,15 +1,30 @@
-﻿{
+{
   "dependencies": {
     "Microsoft.AspNetCore.Server.IISIntegration": "1.0.0-rc2-final",
     "Microsoft.AspNetCore.Server.Kestrel": "1.0.0-rc2-final",
     "Microsoft.AspNetCore.StaticFiles": "1.0.0-rc2-final",
-      "Microsoft.AspNetCore.Mvc": "1.0.0-rc2-final"
+    "Microsoft.AspNetCore.Mvc": "1.0.0-rc2-final",
+    "Microsoft.EntityFrameworkCore": "1.0.0-rc2-final",
+    "Microsoft.EntityFrameworkCore.SqlServer": "1.0.0-rc2-final",
+    "Microsoft.EntityFrameworkCore.Tools": {
+      "version": "1.0.0-preview1-final",
+      "type": "build"
+    },
+    "Microsoft.Extensions.Configuration.Json": "1.0.0-rc2-final"
   },
 
   "tools": {
     "Microsoft.AspNetCore.Server.IISIntegration.Tools": {
       "version": "1.0.0-preview1-final",
       "imports": "portable-net45+win8+dnxcore50"
+    }
+    ,
+    "Microsoft.EntityFrameworkCore.Tools": { // so we can call EF tools from the cmd line
+      "version": "1.0.0-preview1-final",
+      "imports": [
+        "portable-net45+win8"
+      ]
+
     }
   },
 
